dada_tests/parser/float_no_decimal/compiler-output.ref
Error: expected digits after `.`
   ╭─[dada_tests/parser/float_no_decimal.dada:2:14]
   │
 2 │     let a = 1.
   ·              ┬  
   ·              ╰── here
───╯
